<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">和游</string>
    <string name="enter_btn">立即进入</string>
    <string name="content_description"></string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="dialog_cancel_sending">取消发送</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="create">创建</string>
    <string name="error_not_login">需要登录</string>
    <string name="error_no_sdcard">未找到SD卡</string>
    <string name="error_sdcard_not_rw">SD卡不能读写</string>
    <string name="error_unknown">未知错误</string>
    <string name="press_back_to_exit">再按一次 退出程序</string>
    <string name="text_empty">空空如也</string>
    <string name="loading_failed">加载失败</string>
    <string name="page_index">%1$d/%2$d</string>
    <string name="click_screen_to_reload">加载失败，点击屏幕重新加载</string>
    <string name="software_update">软件更新</string>
    <string name="network_unavailable">网络异常，请稍后重试</string>
    <string name="upload_success">上传成功</string>
    <string name="msg_no_more_data">没有更多内容啦！</string>
    <string name="zero">0</string>
    <string name="delete">删除</string>
    <string name="quit">退出</string>
    <string name="msg_list_reach_end">已经是最底部了</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="bottom_tab_title_destiy">主页</string>
    <string name="bottom_tab_title_areas">景区</string>
    <string name="bottom_tab_title_live">实况</string>
    <string name="bottom_tab_title_discovery">商城</string>
    <string name="bottom_tab_title_me">我</string>
    <string name="action_bar_title_scenic">景区</string>
    <string name="get_location_timeout">获取位置超时</string>
    <string name="location_failed">定位失败，点击手动定位</string>
    <string name="action_bar_title_city">城市选择</string>
    <string name="city_list_hint">输入城市或拼音</string>
    <string name="detected_city">定位城市</string>
    <string name="hot_cities">热门城市</string>
    <string name="unknown_city">未定位</string>
    <string name="hint_action_bar_search_scenic">青海</string>
    <string name="hint_action_bar_search_video">搜索视频</string>
    <string name="search_hot_scenics">热门景区</string>
    <string name="search_target">目的地</string>
    <string name="search_result">搜索结果</string>
    <string name="action_bar_title_live">实况</string>
    <string name="hint_live_search">输入关键字</string>
    <string name="live_share">游客分享</string>
    <string name="live_recommend">推荐视频</string>
    <string name="video_play_times">播放：%1$d 次</string>
    <string name="video_play_error">播放出错</string>
    <string name="action_bar_title_discovery">发现</string>
    <string name="action_bar_title_trip_list">编辑游记</string>
    <string name="action_bar_title_trip_day_edit">写路书</string>
    <string name="action_bar_title_trip_detail">游记</string>
    <string name="action_bar_title_trip_write">创建游记</string>
    <string name="action_bar_title_my_trip_detail">写游记</string>
    <string name="trip_add">添加新的游记</string>
    <string name="trip_add_map_info">点击添加地图信息</string>
    <string name="trip_share_title">分享</string>
    <string name="timeline_trip_add_city">添加目的地</string>
    <string name="timeline_trip_add_content">添加旅行感悟</string>
    <string name="trip_content_edit_input_hint">来说点感想吧</string>
    <string name="trip_not_publish">未发布</string>
    <string name="trip_has_update">有更新</string>
    <string name="trip_format_date">第%1$d天 yyyy-MM-dd</string>
    <string name="trip_format_date_count">%1$d天</string>
    <string name="trip_unknown_scenic">未知地点</string>
    <string name="trip_dropdown_add">创建新的游记</string>
    <string name="error_title_less_length">标题不能少于三个字</string>
    <string name="error_title_more_length">标题最长16个字</string>
    <string name="dialog_title_publishing_trips">发送提示</string>
    <string name="dialog_content_publishing_trips_image">正在上传图片...</string>
    <string name="dialog_content_publishing_trips">正在发表游记，请稍后</string>
    <string name="trip_day_post_failed">路书发表失败</string>
    <string name="trip_day_post_failed_no_photo">拍张照片吧</string>
    <string name="bottom_tab_share">分享</string>
    <string name="action_bar_title_me">我</string>
    <string name="action_bar_title_user_profile">个人信息</string>
    <string name="me_item_publish">我的发布</string>
    <string name="me_item_collect">我的收藏</string>
    <string name="me_item_message">我的消息</string>
    <string name="me_item_download">我的消息</string>
    <string name="me_item_share">推荐给朋友</string>
    <string name="me_item_renovate">检查更新</string>
    <string name="me_item_clear">清除缓存</string>
    <string name="me_item_journey">我的行程</string>
    <string name="me_item_settings">设置</string>
    <string name="me_item_avatar">头像</string>
    <string name="me_item_name">名字</string>
    <string name="me_item_phone">手机号</string>
    <string name="hint_me_login">点击登录</string>
    <string name="msg_user_name_change_success">用户名更新成功</string>
    <string name="msg_user_name_change_failed">用户名更新失败</string>
    <string name="msg_user_avata_change_success">用户头像更新成功</string>
    <string name="msg_user_avata_change_failed">用户头像更新失败</string>
    <string name="action_bar_title_settings">设置</string>
    <string name="settings_item_comment">去评价</string>
    <string name="settings_item_feedback">意见反馈</string>
    <string name="settings_item_qrcode">官方微信</string>
    <string name="settings_item_about">关于</string>
    <string name="settings_item_logout">注销登录</string>
    <string name="settings_dialog_content_logout">是否确定注销登录</string>
    <string name="action_bar_title_favorites">想去的地方</string>
    <string name="action_bar_right_edit">编辑</string>
    <string name="action_bar_title_scenic_detail">景区详情</string>
    <string name="scenery_detail_play_title">景区导览</string>
    <string name="scenery_detail_play_summary">一座来了就不想走的城市...</string>
    <string name="scenery_detail_play">收听</string>
    <string name="scenery_detail_func_scenery">景点</string>
    <string name="scenery_detail_func_listen">收听</string>
    <string name="scenery_detail_func_navi">导航</string>
    <string name="scenery_detail_func_live">微视</string>
    <string name="scenery_detail_func_live_title">自游微视</string>
    <string name="scenery_detail_func_service">服务</string>
    <string name="scenery_detail_title_comment">自游说</string>
    <string name="scenery_detail_service_dial_complaint">拨打投诉电话：%1$s</string>
    <string name="scenery_detail_service_dial_help">拨打求助电话：%1$s</string>
    <string name="scenery_detail_service_dialog_title">景区服务</string>
    <string name="scenery_detail_wish_to_go">想去</string>
    <string name="scenery_detail_loading_comments">正在加载评论列表</string>
    <string name="weather_pm25">PM2.5  %1$s</string>
    <string name="weather_temperature_range">%1$d~%2$d &#x2103;</string>
    <string name="address">景区地址：%1$s</string>
    <string name="open_hours">开放时间：%1$s</string>
    <string name="ticket_price">门票价格：%1$s</string>
    <string name="scenic_level">景区星级：%1$s</string>
    <string name="nearby_count">%1$d人在附近</string>
    <string name="audio_resource_unavailable">暂无音频资源</string>
    <string name="offline_download">离线下载</string>
    <string name="offline_download_delete_confirm">确认删除吗？</string>
    <string name="offline_download_prompt">%1$s景区离线包共%2$s, 是否下载？</string>
    <string name="map_pop_up_distance">距离：%1$s</string>
    <string name="scenic_video_title">微视</string>
    <string name="action_bar_title_record_video">录制视频</string>
    <string name="error_already_voted">已经点过赞了</string>
    <string name="scenic_info_any">%1$s：%2$s</string>
    <string name="distance_less_than">&lt;%1$s</string>
    <string name="recommend_route">推荐路线</string>
    <string name="route">路线</string>
    <string name="route_info">%1$s个景点</string>
    <string name="general_cost">人均：%1$s元</string>
    <string name="no_route_available">暂无导航路线</string>
    <string name="route_failed">路线规划失败</string>
    <string name="action_bar_title_comment_edit">写点评</string>
    <string name="comment_edit_input_rating">请输入评分</string>
    <string name="comment_edit_input_content">请输入评论内容</string>
    <string name="comment_edit_input_hint">这个景区怎么样</string>
    <string name="comment_edit_from_album">从相册中选取</string>
    <string name="comment_edit_from_camera">拍照</string>
    <string name="comment_edit_preview">查看大图</string>
    <string name="dialog_title_publishing_comments">发送提示</string>
    <string name="dialog_content_publishing_comments">正在发表评论，请稍后</string>
    <string name="hint_new_comment">输入内容</string>
    <string name="error_no_comment">说点什么吧</string>
    <string name="comment_post_failed">发表失败</string>
    <string name="comment_post_sucess">发表成功</string>
    <string name="pick_image_max_limit_hint">您最多只能选择%1$s张图片</string>
    <string name="action_title_choose_image">选择图片</string>
    <string name="scenic_comment_rating_text">景区评分</string>
    <string name="action_bar_title_video_upload">发布微视</string>
    <string name="video_upload_input_hint">给你拍的视频起个拉风的名字吧~</string>
    <string name="dialog_title_publishing_video">上传提示</string>
    <string name="dialog_content_publishing_video">正在上传视频... %1$d%%</string>
    <string name="video_post_error">视频上传失败</string>
    <string name="video_error_missing_title">给你的视频起个名字吧</string>
    <string name="video_error_not_support">没有视频录制客户端</string>
    <string name="dialog_title_camera_disabled">权限许可</string>
    <string name="dialog_content_camera_disabled">
        应用摄像头权限被禁用，请前应用权限设置页面打开</string>
    <string name="action_bar_title_download">我的下载</string>
    <string name="download_process">%d%</string>
    <string name="error_download_reach_max">任务队列已满</string>
    <string name="action_bar_title_navi">导航</string>
    <string name="action_bar_title_navi_route">景点路线规划</string>
    <string name="action_bar_right_route">路线</string>
    <string name="tab_recommend">推荐路线</string>
    <string name="tab_density">旅客密度</string>
    <string name="navi_route_distance">距离当前位置：%1$s</string>
    <string name="start_routing">开始导航</string>
    <string name="more">更多</string>
    <string name="nearby_scenic">附近景区</string>
    <string name="recommend_scenic">推荐景区</string>
    <string name="search">搜索</string>
    <string name="search_result_scenic">景区</string>
    <string name="search_result_trips">游记</string>
    <string name="service_food">餐饮</string>
    <string name="service_food_title">周边餐饮</string>
    <string name="service_traffic">交通</string>
    <string name="service_hotel">酒店</string>
    <string name="service_hotel_title">周边酒店</string>
    <string name="service_specialty">特产</string>
    <string name="service_specialty_title">周边商铺</string>
    <string name="service_complaint">投诉</string>
    <string name="service_help">求助</string>
    <string name="service_video">发布微视</string>
    <string name="service_picture">发布美图</string>
    <string name="service_wc">厕所</string>
    <string name="service_wc_title">周边厕所</string>
    <string name="service_food_keyword">餐饮</string>
    <string name="service_hotel_keyword">酒店</string>
    <string name="service_specialty_keyword">购物</string>
    <string name="service_wc_keyword">厕所</string>
    <string name="action_bar_title_post_images">发布美图</string>
    <string name="dialog_content_posting_images">正在发布，请稍后</string>
    <string name="dialog_content_posting_images_progress">正在上传第%1$d张图片...</string>
    <string name="post_image_input_title">请输入标题</string>
    <string name="post_image_add_images">请添加要发布的图片</string>
    <string name="post_image_input_hint">写句美好的心情吧</string>
    <string name="image_post_success">发布成功</string>
    <string name="about_current_newest">当前最新版本</string>
    <string name="about_content">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;自游无限是一家专注于智慧旅游产品发展的移动互联网企业，是新型互联网企业，创新双软企业，高新技术公司，发展目标“打造智慧景区旅游第一品牌“。</string>
    <string name="about_copyright">自游无限 www.selftravel.com.cn</string>
</resources>