<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_grey_bg"
    android:orientation="vertical" >

    <include layout="@layout/layout_action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <com.ziyou.selftravel.widget.RatioImageView
                android:id="@+id/riv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="105dp"
                android:layout_marginRight="105dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_launcher"
                app:imageRatio="1"
                app:limit="1" />

            <TextView
                android:id="@+id/version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:background="@color/transparency"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/about_content"
                android:textColor="@color/base_text_summary"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/item_version"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="65dp"
                android:layout_marginRight="65dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_item_tb"
                android:gravity="center"
                android:text="@string/about_current_newest"
                android:textColor="@color/base_text_summary"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_theme_highlight"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/about_copyright"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>